# moo-cow-solver

./: Cargo.toml
src/: api.rs  lib.rs  main.rs  models.rs  settlement_contract_data.rs  slippage.rs  solve.rs  token_list.rs
src/api/: solve.rs
src/contracts/: Cargo.toml  build.rs
src/contracts/artifacts/: MooSettlementContract.json
src/contracts/src/: lib.rs
src/interactions/: bytes_hex.rs  mod.rs  settlement_contract.rs  u256_decimal.rs
src/models/: batch_auction_model.rs  settlement_contract_data.rs
src/solve/: paraswap_solver.rs
src/solve/paraswap_solver/: api.rs
src/solve/zeroex_solver/: api.rs
src/utils/: conversions.rs  h160_hexadecimal.rs  u256_decimal.rs
