[package]
name = "contracts"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[[bin]]
name = "vendor"
required-features = ["bin"]

[features]
default = []

[dependencies]
ethcontract = "0.23.2"
serde = { version = "1.0.104", features = ["derive"] }

# [bin-dependencies]
anyhow = "1.0.43"
ethcontract-generate = { version = "0.23.0", features = ["http"] }
serde_json = "1.0.66"
tracing = "0.1.26"
tracing-subscriber = "0.2.23"

[build-dependencies]
ethcontract = "0.23.2"
ethcontract-generate = "0.23.0"
maplit = "1.0.2"
